@@ -1,6 +1,5 @@
 package org.arig.robot.services;
 
-import com.google.common.collect.ImmutableMap;
 import lombok.extern.slf4j.Slf4j;
 import org.arig.robot.constants.EurobotConfig;
 import org.arig.robot.model.Strategy;
@@ -9,7 +8,8 @@ import org.arig.robot.model.ecran.EcranConfig;
 import org.arig.robot.model.ecran.EcranParams;
 import org.arig.robot.model.ecran.EcranState;
 
-import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -37,12 +37,12 @@ public class EcranService extends AbstractEcranService<EcranConfig, EcranState> 
     @Override
     protected EcranParams getParams() {
         EcranParams ecranParams = new EcranParams();
-        ecranParams.setTeams(ImmutableMap.of(
+        ecranParams.setTeams(Map.of(
                 Team.JAUNE.name(), "yellow",
                 Team.VIOLET.name(), "purple"
         ));
         ecranParams.setStrategies(Stream.of(Strategy.values()).map(Enum::name).collect(Collectors.toList()));
-        ecranParams.setOptions(Arrays.asList(EurobotConfig.STATUETTE_PRESENTE, EurobotConfig.VITRINE_PRESENTE));
+        ecranParams.setOptions(List.of(EurobotConfig.TROIS_DANS_ABRI));
         return ecranParams;
     }
 }
