@@ -1,6 +1,5 @@
 package org.arig.robot.services;
 
-import com.google.common.collect.ImmutableMap;
 import lombok.extern.slf4j.Slf4j;
 import org.arig.robot.constants.EurobotConfig;
 import org.arig.robot.model.EurobotStatus;
@@ -8,6 +7,8 @@ import org.arig.robot.model.ecran.EcranParams;
 import org.arig.robot.model.ecran.EcranState;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
+import java.util.Map;
 
 @Slf4j
 @Service
@@ -22,9 +23,8 @@ public class OdinEcranService extends EcranService {
         if (stateInfos.isOtherRobot()) {
             stateInfos.setTeam(rs.team());
             stateInfos.setStrategy(rs.strategy());
-            stateInfos.setOptions(ImmutableMap.of(
-                    EurobotConfig.STATUETTE_PRESENTE, rs.statuettePresente(),
-                    EurobotConfig.VITRINE_PRESENTE, rs.vitrinePresente()
+            stateInfos.setOptions(Map.of(
+                    EurobotConfig.TROIS_DANS_ABRI, rs.troisDeposeAbriChantier()
             ));
         }
     }
